[conf] Reorganized sbt files